--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/trio.jpeg">
+                <img src="trio.jpeg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -161,7 +161,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/bini 1.jpg">
+                <img src="bini 1.jpg">
                 <div class="layer">
                     <h3>Social Media App</h3>
                     <p>Pag-ibig na naman Ang usap-usapan sa paligid ko (Paligid ko) Ngunit kung nais mong malaman (Malaman)
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/bini 2.jpg">
+                <img src="bini 2.jpg">
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>Pag-ibig na naman Ang usap-usapan sa paligid ko (Paligid ko) Ngunit kung nais mong malaman (Malaman)
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/bini 4.jpg">
+                <img src="bini 4.jpg">
                 <div class="layer">
                     <h3>Online Shopping App</h3>
                     <p>Pag-ibig na naman Ang usap-usapan sa paligid ko (Paligid ko) Ngunit kung nais mong malaman (Malaman)
