--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <p> <i class="fa-solid fa-square-phone"></i> 0977 271 9114</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/ellachioz26"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/ellachioo"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://github.com/ellachio"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.instagram.com/ellachioo/?img_index=1"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/ella-chio-7675a0240/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
